支持缓存用户设置信息

--- a/Chat/App.config
+++ b/Chat/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <appSettings>
+      <add key="ip" value="iwiniwn"/>
+      <add key="port" value="30"/>
+      <add key="localName" value="local"/>
+      <add key="remoteName" value="remote"/>
+    </appSettings>
 </configuration>
